--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
           
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
-                  Users weren't looking for a place to book and research, Google has them covered. Users were looking to feel more connected to the places they visit, through making friends and discovering local gems.
+                  It is easy for travellers to feel overwhelmed with the unfamiliarity of a place and the amount of decisions to be made without having sincere recommendations from locals. 
+How might we build a product that connects travellers with like-minded locals who are passionate about recommending their favourite spots or are generous with their time curating tours to travellers.
+
                 </div>
               </div>
             </div>
