--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
     <!-- Hero Image of project with overlay -->
     <!-- Jumbotron Bootstrap Component -->
-  <div class="jumbotron jumbotron-fluid" style="background-image: url(images/travel app-bg-image.png); background-size: 100%; background-blend-mode: multiply; opacity: 92%;">
+  <div class="jumbotron jumbotron-fluid" style="background-image: url(https://github.com/coc00r1co/UX_UI_HW_20/blob/main/images/travel%20app-bg-image.png); background-size: 100%; background-blend-mode: multiply; opacity: 92%;">
     <div class="container">
       <h1 class="display-4">Travel App Case Study</h1>
       <p class="lead">Connecting Urban Travellers with locals</p>
