--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ How might we build a product that connects travellers with like-minded locals wh
         <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
         <!-- User Journey and Prototype -->              
         <div class="card mb-3">
-          <img src="/UX_UI_HW_20_/images/prototype.gif" class="card-img-top" alt="...">
+          <img src="https://github.com/coc00r1co/UX_UI_HW_20/blob/main/images/prototype.gif" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Prototype</h5>
             <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
