--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
     <!-- Hero Image of project with overlay -->
     <!-- Jumbotron Bootstrap Component -->
-  <div class="jumbotron jumbotron-fluid" style="background-image: url(https://github.com/coc00r1co/UX_UI_HW_20/blob/main/images/travel%20app-bg-image.png); background-size: 100%; background-blend-mode: multiply; opacity: 92%;">
+  <div class="jumbotron jumbotron-fluid" style="background-image: url(images/travel%20app-bg-image.png); background-size: 100%; background-blend-mode: multiply; opacity: 92%;">
     <div class="container">
       <h1 class="display-4">Travel App Case Study</h1>
       <p class="lead">Connecting Urban Travellers with locals</p>
@@ -133,7 +133,7 @@ How might we build a product that connects travellers with like-minded locals wh
             </div>
           </div>
           <div class="card mb-3">
-            <img src="/UX_UI_HW_20_/images/Travel App-Storyboard.png" class="card-img-top" alt="...">
+            <img src="images/Travel App-Storyboard.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text"></p>
@@ -147,7 +147,7 @@ How might we build a product that connects travellers with like-minded locals wh
         <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
         <!-- User Journey and Prototype -->              
         <div class="card mb-3">
-          <img src="https://github.com/coc00r1co/UX_UI_HW_20/blob/main/images/prototype.gif" class="card-img-top" alt="...">
+          <img src="images/prototype.gif" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Prototype</h5>
             <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
@@ -155,7 +155,7 @@ How might we build a product that connects travellers with like-minded locals wh
         </div>
 
           <div class="card mb-3">
-            <img src="/UX_UI_HW_20_/images/Travel App-Task and User Flow.jpg" class="card-img-top" alt="...">
+            <img src="images/Travel App-Task and User Flow.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">User Journey</h5>
               <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
